--- a/index.html
+++ b/index.html
@@ -24,27 +24,33 @@
         
         <div class="main-section-rated">
           <div class="stars" id="rated1">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
+            <div>
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+            </div>
             <p>Rated 5 Stars in Reviews</p>
           </div>
           <div class="stars" id="rated2">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
+            <div>
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+            </div>
             <p>Rated 5 Stars in Report Guru</p>
           </div>
           <div class="stars" id="rated3">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
-            <img src="images/icon-star.svg" alt="">
+            <div>
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="">
+            </div>
             <p>Rated 5 Stars in BestTech</p>
           </div>
         </div>
