--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
         <div class="main-section-rated">
           <div class="stars" id="rated1">
             <div>
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
             </div>
             <p>Rated 5 Stars in Reviews</p>
           </div>
           <div class="stars" id="rated2">
             <div>
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
             </div>
             <p>Rated 5 Stars in Report Guru</p>
           </div>
           <div class="stars" id="rated3">
             <div>
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
-              <img src="images/icon-star.svg" alt="">
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
+              <img src="images/icon-star.svg" alt="star svg" aria-hidden=”true”>
             </div>
             <p>Rated 5 Stars in BestTech</p>
           </div>
@@ -106,7 +106,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/TeffyyyyRachel/" target="_blank">Stéphanie Rachel</a>.
+      >. Coded by <a href="https://github.com/TeffyyyyRachel/" target="_blankstar svg" aria-hidden=”true”>Stéphanie Rachel</a>.
     </div>
   </body>
 </html>
