--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     </main>
 
     <div class="attribution">
-      Challenge by
+      <p>Challenge by</p>
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/TeffyyyyRachel/" target="_blankstar svg" aria-hidden=”true”>Stéphanie Rachel</a>.
+      >. Coded by <a href="https://github.com/TeffyyyyRachel/" target="_blankstar svg" aria-hidden=true>Stéphanie Rachel</a>.
     </div>
   </body>
 </html>
