--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
     <div class="attribution">
       <p>Challenge by</p>
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/TeffyyyyRachel/" target="_blankstar svg" aria-hidden=true>Stéphanie Rachel</a>.
+        >Frontend Mentor.</a> <p>Coded by</p> <a href="https://github.com/TeffyyyyRachel/" target="_blankstar svg" aria-hidden=true>Stéphanie Rachel</a>.
     </div>
   </body>
 </html>
