--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 
     <div class="attribution">
       <p>Challenge by</p>
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor.</a> <p>Coded by</p> <a href="https://github.com/TeffyyyyRachel/" target="_blankstar svg" aria-hidden=true>Stéphanie Rachel</a>.
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a> 
+      <p>Coded by</p> 
+      <a href="https://github.com/TeffyyyyRachel/" target="_blank" aria-hidden=true>Stéphanie Rachel</a>.
     </div>
   </body>
 </html>
