--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <p>Challenge by</p>
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a> 
       <p>Coded by</p> 
-      <a href="https://github.com/TeffyyyyRachel/" target="_blank" aria-hidden=true>Stéphanie Rachel.</a>
+      <a href="https://github.com/TeffyyyyRachel/" target="_blank">Stéphanie Rachel.</a>
     </div>
   </body>
 </html>
