--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
     <div class="attribution">
       <p>Challenge by</p>
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a> 
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"><p>Frontend Mentor.</p></a> 
       <p>Coded by</p> 
-      <a href="https://github.com/TeffyyyyRachel/" target="_blank">Stéphanie Rachel.</a>
+      <a href="https://github.com/TeffyyyyRachel/" target="_blank"><p>Stéphanie Rachel.</p></a>
     </div>
   </body>
 </html>
