--- a/index.html
+++ b/index.html
@@ -103,10 +103,7 @@
     </main>
 
     <div class="attribution">
-      <p>Challenge by</p>
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"><p>Frontend Mentor.</p></a> 
-      <p>Coded by</p> 
-      <a href="https://github.com/TeffyyyyRachel/" target="_blank"><p>Stéphanie Rachel.</p></a>
+      <p>Challenge by<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor.</a>Coded by<a href="https://github.com/TeffyyyyRachel/" target="_blank"> Stéphanie Rachel.</a></p>
     </div>
   </body>
 </html>
